--- a/HackerRank/Stacks/Stacks.csproj
+++ b/HackerRank/Stacks/Stacks.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BalancedBrackets.cs" />
     <Compile Include="MaximumElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
