--- a/HackerRank/StacksTests/StacksTests.csproj
+++ b/HackerRank/StacksTests/StacksTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="MaximumElementTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BalancedBracketsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stacks\Stacks.csproj">
