--- a/HackerRank/Stacks/Stacks.csproj
+++ b/HackerRank/Stacks/Stacks.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BalancedBrackets.cs" />
+    <Compile Include="LargestRectangle.cs" />
     <Compile Include="MaximumElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
