--- a/HackerRank/StacksTests/StacksTests.csproj
+++ b/HackerRank/StacksTests/StacksTests.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Numerics" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -53,6 +54,7 @@
     <Compile Include="MaximumElementTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BalancedBracketsTests.cs" />
+    <Compile Include="LargestRectangleTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stacks\Stacks.csproj">
