--- a/Stacks/Stacks.csproj
+++ b/Stacks/Stacks.csproj
@@ -49,6 +49,7 @@
     <Compile Include="LargestRectangle.cs" />
     <Compile Include="MaximumElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleTextEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
