--- a/StacksTests/StacksTests.csproj
+++ b/StacksTests/StacksTests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BalancedBracketsTests.cs" />
     <Compile Include="LargestRectangleTests.cs" />
+    <Compile Include="SimpleTextEditorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Stacks\Stacks.csproj">
