--- a/ImplementationTests/ImplementationTests.csproj
+++ b/ImplementationTests/ImplementationTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KangarooTests.cs" />
     <Compile Include="DivisibleSusmPairsTest.cs" />
+    <Compile Include="CutTheSticksTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Implementation\Implementation.csproj">
