--- a/Implementation/Implementation.csproj
+++ b/Implementation/Implementation.csproj
@@ -43,6 +43,7 @@
     <Compile Include="DivisibleSumPairs.cs" />
     <Compile Include="Kangaroo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SockMerchant.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
