--- a/ImplementationTests/ImplementationTests.csproj
+++ b/ImplementationTests/ImplementationTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="KangarooTests.cs" />
     <Compile Include="DivisibleSusmPairsTest.cs" />
     <Compile Include="CutTheSticksTests.cs" />
+    <Compile Include="SockMerchantTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Implementation\Implementation.csproj">
