- Added solution to the jumping on clouds problem

--- a/ImplementationTests/ImplementationTests.csproj
+++ b/ImplementationTests/ImplementationTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CutTheSticksTests.cs" />
     <Compile Include="SockMerchantTests.cs" />
     <Compile Include="RepeatedStringTests.cs" />
+    <Compile Include="JumpingOnTheCloudsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Implementation\Implementation.csproj">
