--- a/Implementation/Implementation.csproj
+++ b/Implementation/Implementation.csproj
@@ -42,6 +42,7 @@
     <Compile Include="AngryProfessor.cs" />
     <Compile Include="CutTheSticks.cs" />
     <Compile Include="DivisibleSumPairs.cs" />
+    <Compile Include="JumpingOnTheClouds.cs" />
     <Compile Include="Kangaroo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepeatedString.cs" />
