Added solution to the strange counter problem

--- a/ImplementationTests/ImplementationTests.csproj
+++ b/ImplementationTests/ImplementationTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="SockMerchantTests.cs" />
     <Compile Include="RepeatedStringTests.cs" />
     <Compile Include="JumpingOnTheCloudsTests.cs" />
+    <Compile Include="StrangeCounterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Implementation\Implementation.csproj">
