--- a/BitManipulationTests/BitManipulationTests.csproj
+++ b/BitManipulationTests/BitManipulationTests.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="LonelyIntegerTests.cs" />
+    <Compile Include="MaximizingXORTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SumvsXORTests.cs" />
   </ItemGroup>
