--- a/BitManipulation/BitManipulation.csproj
+++ b/BitManipulation/BitManipulation.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CounterGame.cs" />
     <Compile Include="LonelyInteger.cs" />
     <Compile Include="MaximizingXOR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
