--- a/BitManipulationTests/BitManipulationTests.csproj
+++ b/BitManipulationTests/BitManipulationTests.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SumvsXORTests.cs" />
     <Compile Include="CounterGameTests.cs" />
+    <Compile Include="FlippingBitsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BitManipulation\BitManipulation.csproj">
