--- a/Sorting/Sorting.csproj
+++ b/Sorting/Sorting.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InsertionSortPart2.cs" />
     <Compile Include="IntroToTutorialChallenges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
