--- a/Sorting/Sorting.csproj
+++ b/Sorting/Sorting.csproj
@@ -43,6 +43,7 @@
     <Compile Include="InsertionSortPart2.cs" />
     <Compile Include="IntroToTutorialChallenges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quicksort1Partition.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
