--- a/Implementation/Implementation.csproj
+++ b/Implementation/Implementation.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DivisibleSumPairs.cs" />
     <Compile Include="JumpingOnTheClouds.cs" />
     <Compile Include="Kangaroo.cs" />
+    <Compile Include="MiniMaxSum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepeatedString.cs" />
     <Compile Include="SockMerchant.cs" />
