Added designer pdf task solution

--- a/Implementation/Implementation.csproj
+++ b/Implementation/Implementation.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="AngryProfessor.cs" />
     <Compile Include="CutTheSticks.cs" />
+    <Compile Include="DesignerPDFViewer.cs" />
     <Compile Include="DivisibleSumPairs.cs" />
     <Compile Include="JumpingOnTheClouds.cs" />
     <Compile Include="Kangaroo.cs" />
