Sollution to the append and delete task

--- a/Implementation/Implementation.csproj
+++ b/Implementation/Implementation.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AngryProfessor.cs" />
+    <Compile Include="AppendAndDelete.cs" />
     <Compile Include="CutTheSticks.cs" />
     <Compile Include="DesignerPDFViewer.cs" />
     <Compile Include="DivisibleSumPairs.cs" />
