--- a/BitManipulation/BitManipulation.csproj
+++ b/BitManipulation/BitManipulation.csproj
@@ -47,6 +47,13 @@
     <Compile Include="MaximizingXOR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SumvsXOR.cs" />
+    <Compile Include="YetAnotherMinimaxProblem.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj">
+      <Project>{bb5dd39e-42f0-4d67-b8e4-119b259f57ce}</Project>
+      <Name>Utilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
