--- a/CrackingTheCodingInterview/CrackingTheCodingInterview.csproj
+++ b/CrackingTheCodingInterview/CrackingTheCodingInterview.csproj
@@ -43,7 +43,9 @@
     <Compile Include="ArrayAndStrings.cs" />
     <Compile Include="LinkedLists.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StacksAndQueues.cs" />
     <Compile Include="Utils\ListNode.cs" />
+    <Compile Include="Utils\MinStack.cs" />
     <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
