--- a/CrackingTheCodingInterviewTests/CrackingTheCodingInterviewTests.csproj
+++ b/CrackingTheCodingInterviewTests/CrackingTheCodingInterviewTests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ArrayAndStringsTests.cs" />
     <Compile Include="LinkedListsTests.cs" />
+    <Compile Include="StacksAndQueuesTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CrackingTheCodingInterview\CrackingTheCodingInterview.csproj">
