--- a/CrackingTheCodingInterview/CrackingTheCodingInterview.csproj
+++ b/CrackingTheCodingInterview/CrackingTheCodingInterview.csproj
@@ -46,6 +46,7 @@
     <Compile Include="StacksAndQueues.cs" />
     <Compile Include="Utils\ListNode.cs" />
     <Compile Include="Utils\MinStack.cs" />
+    <Compile Include="Utils\MyQueue.cs" />
     <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
