--- a/CrackingTheCodingInterviewTests/CrackingTheCodingInterviewTests.csproj
+++ b/CrackingTheCodingInterviewTests/CrackingTheCodingInterviewTests.csproj
@@ -45,7 +45,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -55,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StacksAndQueuesTests.cs" />
     <Compile Include="TreesAndGraphsTests.cs" />
+    <Compile Include="BitManipulationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CrackingTheCodingInterview\CrackingTheCodingInterview.csproj">
