Added SQL solutions

--- a/SQL/SQL.csproj
+++ b/SQL/SQL.csproj
@@ -55,6 +55,8 @@
     <Content Include="BasicSelect\WeatherObservationStation4.sql" />
     <Content Include="BasicSelect\WeatherObservationStation5.sql" />
     <Content Include="BasicSelect\WeatherObservationStation6.sql" />
+    <Content Include="BasicSelect\WeatherObservationStation7.sql" />
+    <Content Include="BasicSelect\WeatherObservationStation8.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
