--- a/SortingTests/SortingTests.csproj
+++ b/SortingTests/SortingTests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="InsertionSortPart2Tests.cs" />
     <Compile Include="IntroToTutorialChallengesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuickSort2Tests.cs" />
     <Compile Include="RunningTimeOfAlgorithmsTests.cs" />
     <Compile Include="Quicksort1PartitionTests.cs" />
   </ItemGroup>
