--- a/SortingTests/SortingTests.csproj
+++ b/SortingTests/SortingTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="RunningTimeOfAlgorithmsTests.cs" />
     <Compile Include="Quicksort1PartitionTests.cs" />
     <Compile Include="QuicksortInPlaceTests.cs" />
+    <Compile Include="RunningTimeOfQuicksortTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sorting\Sorting.csproj">
