--- a/Sorting/Sorting.csproj
+++ b/Sorting/Sorting.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CountingSort1.cs" />
+    <Compile Include="CountingSort2.cs" />
     <Compile Include="InsertionSortPart1.cs" />
     <Compile Include="InsertionSortPart2.cs" />
     <Compile Include="IntroToTutorialChallenges.cs" />
