Added counting sort tasks

--- a/Sorting/Sorting.csproj
+++ b/Sorting/Sorting.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="CountingSort1.cs" />
     <Compile Include="CountingSort2.cs" />
+    <Compile Include="CountingSort3.cs" />
     <Compile Include="InsertionSortPart1.cs" />
     <Compile Include="InsertionSortPart2.cs" />
     <Compile Include="IntroToTutorialChallenges.cs" />
