--- a/SortingTests/SortingTests.csproj
+++ b/SortingTests/SortingTests.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CountingSort2Tests.cs" />
+    <Compile Include="CountingSort3Tests.cs" />
     <Compile Include="InsertionSortPart1Tests.cs" />
     <Compile Include="InsertionSortPart2Tests.cs" />
     <Compile Include="IntroToTutorialChallengesTests.cs" />
