Counting sort 4 solution

--- a/SortingTests/SortingTests.csproj
+++ b/SortingTests/SortingTests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="CountingSort2Tests.cs" />
     <Compile Include="CountingSort3Tests.cs" />
+    <Compile Include="CountingSort4Tests.cs" />
     <Compile Include="InsertionSortPart1Tests.cs" />
     <Compile Include="InsertionSortPart2Tests.cs" />
     <Compile Include="IntroToTutorialChallengesTests.cs" />
