--- a/Sorting/Sorting.csproj
+++ b/Sorting/Sorting.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClosestNumbers.cs" />
     <Compile Include="CountingSort1.cs" />
     <Compile Include="CountingSort2.cs" />
     <Compile Include="CountingSort3.cs" />
