--- a/SortingTests/SortingTests.csproj
+++ b/SortingTests/SortingTests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ClosestNumbersTests.cs" />
     <Compile Include="CountingSort2Tests.cs" />
     <Compile Include="CountingSort3Tests.cs" />
     <Compile Include="CountingSort4Tests.cs" />
