Added icecream parlor solution

--- a/SearchTests/SearchTests.csproj
+++ b/SearchTests/SearchTests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="HackerlandRadioTransmittersTests.cs" />
+    <Compile Include="IcecreamParlorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
