Added solution to pairs

--- a/Search/Search.csproj
+++ b/Search/Search.csproj
@@ -44,6 +44,7 @@
     <Compile Include="HackerlandRadioTransmitters.cs" />
     <Compile Include="IcecreamParlor.cs" />
     <Compile Include="MissingNumbers.cs" />
+    <Compile Include="Pairs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
