--- a/Search/Search.csproj
+++ b/Search/Search.csproj
@@ -46,6 +46,7 @@
     <Compile Include="MissingNumbers.cs" />
     <Compile Include="Pairs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SherlockАndArray.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
