--- a/SearchTests/SearchTests.csproj
+++ b/SearchTests/SearchTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MissingNumbersTests.cs" />
     <Compile Include="PairsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SherlockАndArrayTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Search\Search.csproj">
