--- a/SearchTests/SearchTests.csproj
+++ b/SearchTests/SearchTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="GridlandMetroTests.cs" />
     <Compile Include="HackerlandRadioTransmittersTests.cs" />
     <Compile Include="IcecreamParlorTests.cs" />
+    <Compile Include="MaximumSubarraySumTests.cs" />
     <Compile Include="MissingNumbersTests.cs" />
     <Compile Include="PairsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
