--- a/Search/Search.csproj
+++ b/Search/Search.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectedCellsInAGrid.cs" />
+    <Compile Include="CountLuck.cs" />
     <Compile Include="GridlandMetro.cs" />
     <Compile Include="HackerlandRadioTransmitters.cs" />
     <Compile Include="IcecreamParlor.cs" />
