--- a/SearchTests/SearchTests.csproj
+++ b/SearchTests/SearchTests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ConnectedCellsInAGridTests.cs" />
+    <Compile Include="CountLuckTests.cs" />
     <Compile Include="GridlandMetroTests.cs" />
     <Compile Include="HackerlandRadioTransmittersTests.cs" />
     <Compile Include="IcecreamParlorTests.cs" />
