--- a/StringsTests/StringsTests.csproj
+++ b/StringsTests/StringsTests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="HackerRankInAStringTests.cs" />
     <Compile Include="SuperReducedStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CamelcaseTests.cs" />
