Added solution to the is funny string

--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camelcase.cs" />
+    <Compile Include="FunnyString.cs" />
     <Compile Include="HackerRankInAString.cs" />
     <Compile Include="MarsExploration.cs" />
     <Compile Include="RichieRich.cs" />
