--- a/StringsTests/StringsTests.csproj
+++ b/StringsTests/StringsTests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FunnyStringTests.cs" />
     <Compile Include="HackerRankInAStringTests.cs" />
     <Compile Include="MarsExplorationTests.cs" />
     <Compile Include="SuperReducedStringTests.cs" />
