Added solution to gemstones

--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Camelcase.cs" />
     <Compile Include="FunnyString.cs" />
+    <Compile Include="Gemstones.cs" />
     <Compile Include="HackerRankInAString.cs" />
     <Compile Include="MarsExploration.cs" />
     <Compile Include="RichieRich.cs" />
