--- a/StringsTests/StringsTests.csproj
+++ b/StringsTests/StringsTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="GemstonesTests.cs" />
     <Compile Include="HackerRankInAStringTests.cs" />
     <Compile Include="MarsExplorationTests.cs" />
+    <Compile Include="PangramsTests.cs" />
     <Compile Include="SuperReducedStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CamelcaseTests.cs" />
