Added solution to the Alternating Characters problem

--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlternatingCharacters.cs" />
     <Compile Include="Camelcase.cs" />
     <Compile Include="FunnyString.cs" />
     <Compile Include="Gemstones.cs" />
