--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -50,6 +50,7 @@
     <Compile Include="RichieRich.cs" />
     <Compile Include="SuperReducedString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TheLoveLetterMystery.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
