Added solution to two characters problem

--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -52,6 +52,7 @@
     <Compile Include="SuperReducedString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TheLoveLetterMystery.cs" />
+    <Compile Include="TwoCharacters.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
