--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TheLoveLetterMystery.cs" />
     <Compile Include="TwoCharacters.cs" />
+    <Compile Include="TwoStrings.cs" />
     <Compile Include="WeightedUniformStrings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
