Added solution to breaking the records

--- a/ImplementationTests/ImplementationTests.csproj
+++ b/ImplementationTests/ImplementationTests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AppendAndDeleteTests.cs" />
+    <Compile Include="BreakingTheRecordsTests.cs" />
     <Compile Include="DesignerPDFViewerTests.cs" />
     <Compile Include="MiniMaxSumTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
