--- a/GreedyTests/GreedyTests.csproj
+++ b/GreedyTests/GreedyTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="GridChallengeTests.cs" />
     <Compile Include="MarcsCakewalkTests.cs" />
+    <Compile Include="MarkAndToysTests.cs" />
     <Compile Include="MinimumAbsoluteDifferenceInAnArrayTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
