--- a/GreedyTests/GreedyTests.csproj
+++ b/GreedyTests/GreedyTests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GridChallengeTests.cs" />
+    <Compile Include="LargestPermutationTests.cs" />
     <Compile Include="MarcsCakewalkTests.cs" />
     <Compile Include="MarkAndToysTests.cs" />
     <Compile Include="MinimumAbsoluteDifferenceInAnArrayTests.cs" />
