--- a/Greedy/Greedy.csproj
+++ b/Greedy/Greedy.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AngryChildren.cs" />
     <Compile Include="GreedyFlorist.cs" />
     <Compile Include="GridChallenge.cs" />
     <Compile Include="LargestPermutation.cs" />
