--- a/Greedy/Greedy.csproj
+++ b/Greedy/Greedy.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MarkAndToys.cs" />
     <Compile Include="MinimumAbsoluteDifferenceInAnArray.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoArrays.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
