--- a/GreedyTests/GreedyTests.csproj
+++ b/GreedyTests/GreedyTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="MarkAndToysTests.cs" />
     <Compile Include="MinimumAbsoluteDifferenceInAnArrayTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwoArraysTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Greedy\Greedy.csproj">
