--- a/GreedyTests/GreedyTests.csproj
+++ b/GreedyTests/GreedyTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AngryChildrenTests.cs" />
     <Compile Include="GreedyFloristTests.cs" />
     <Compile Include="GridChallengeTests.cs" />
+    <Compile Include="JimAndTheOrdersTests.cs" />
     <Compile Include="LargestPermutationTests.cs" />
     <Compile Include="MarcsCakewalkTests.cs" />
     <Compile Include="MarkAndToysTests.cs" />
