Added solution to making anagrams

--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -46,6 +46,7 @@
     <Compile Include="FunnyString.cs" />
     <Compile Include="Gemstones.cs" />
     <Compile Include="HackerRankInAString.cs" />
+    <Compile Include="MakingAnagrams.cs" />
     <Compile Include="MarsExploration.cs" />
     <Compile Include="Pangrams.cs" />
     <Compile Include="RichieRich.cs" />
