--- a/DynamicProgrammingTests/DynamicProgrammingTests.csproj
+++ b/DynamicProgrammingTests/DynamicProgrammingTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="LongestIncreasingSubsequenceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TheCoinChangeProblemTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DynamicProgramming\DynamicProgramming.csproj">
