--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MarsExploration.cs" />
     <Compile Include="Pangrams.cs" />
     <Compile Include="RichieRich.cs" />
+    <Compile Include="StringConstruction.cs" />
     <Compile Include="SuperReducedString.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TheLoveLetterMystery.cs" />
