--- a/StringsTests/StringsTests.csproj
+++ b/StringsTests/StringsTests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="MakingAnagramsTests.cs" />
     <Compile Include="MarsExplorationTests.cs" />
     <Compile Include="PangramsTests.cs" />
+    <Compile Include="StringConstructionTests.cs" />
     <Compile Include="SuperReducedStringTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CamelcaseTests.cs" />
