--- a/BotBuildingTests/BotBuildingTests.csproj
+++ b/BotBuildingTests/BotBuildingTests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BotCleanStochasticTests.cs" />
     <Compile Include="BotCleanTests.cs" />
     <Compile Include="BotSavesPrincessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
