Added solution to game of thrones 1

--- a/Strings/Strings.csproj
+++ b/Strings/Strings.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CaesarCipher.cs" />
     <Compile Include="Camelcase.cs" />
     <Compile Include="FunnyString.cs" />
+    <Compile Include="GameOfThronesI.cs" />
     <Compile Include="Gemstones.cs" />
     <Compile Include="HackerRankInAString.cs" />
     <Compile Include="MakingAnagrams.cs" />
